# ElephantNotesd

./: Cargo.toml  README.md
.github/workflows/: build.yml
assets/: editor.html
scripts/: install.ps1  install.sh
src/: app.rs  main.rs  models.rs
src/ui/: mod.rs  notes_panel.rs  settings.rs  sidebar.rs
