[package]
name = "notes_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["glow", "wayland", "x11"] }
egui = { version = "0.31", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
image = "0.24"
egui-file-dialog = "0.10"
pulldown-cmark = "0.9"
notify = "6"
egui_commonmark = "0.20"
tiny_http = "0.12"

[[bin]]
name = "md_watch"
path = "src/bin/md_watch.rs"

[[bin]]
name = "editor_server"
path = "src/bin/editor_server.rs"
